--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-diffusers
-transformers
-accelerate
-torch
-flask
-requests
-Pillow
+# Core ML packages
+diffusers>=0.33.1
+transformers>=4.51.2
+accelerate>=1.6.0
+torch>=2.6.0
+
+# Web server and API
+flask==3.1.0
+requests>=2.32.3
+
+# Image processing - required by diffusers for image handling
+Pillow==11.2.1
+
+# Optional utilities
+tqdm==4.67.1
+
+# MCP integration
+mcp[cli]>=1.6.0
